--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.331.0",
     "mini-svg-data-uri": "^1.4.4",
+    "moment": "^2.30.1",
     "mongoose": "^8.1.3",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
